# class_project_template

./: AUTHORS  CONFIG  INSTALL  README  README.md  autogen.sh  configure.ac  generate.sh
doc/: Makefile.am  asciidoc.conf  mkman
include/: template.h
src/: Makefile.am  libtemplate.la  libtemplate.pc  libtemplate.pc.in  myp_mystatefulmod.c  myp_mystatelessmod.c  selftest  template  template.c  template_selftest.c
